--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -1,1 +1,21 @@
-<h1>home</h1>
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Creatica</title>
+        <link rel="stylesheet" href="{% static 'style.css' %}">
+    </head>
+    <body>
+        <header>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </div>
+        </header>
+    </body>
+</html>
