--- a/study/static/style.css
+++ b/study/static/style.css
@@ -25,3 +25,78 @@ body {
     text-align: center;
 }
 
+#container {
+    height: 150px;
+    width: 600px;
+    background-color: white;
+    margin: 0 auto;
+    border: 5px solid gray;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.label {
+    align-self: center;
+    justify-self: center;
+
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#pomodoro {
+    grid-area: 1 / 2 / 1 / 2;
+}
+#shortbreak {
+    grid-area: 1 / 4 / 1 / 4;
+}
+#longbreak {
+    grid-area: 1 / 3 / 1 / 3;
+}
+
+.timer {
+    display: flex;
+    align-self: center;
+    justify-self: center;
+
+    font-size: 25px;
+    font-weight: bold;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+#long-timer {
+    grid-area: 2 / 3 / 2 / 3;
+}
+
+#pomo-timer {
+    grid-area: 2 / 2 / 2 / 2;
+}
+
+#short-timer {
+    grid-area: 2 / 4 / 2 / 4;
+}
+
+.btn {
+    margin: 0 auto;
+    width: 70px;
+    height: 30px;
+
+    font-size: 20px;
+}
+
+#start {
+    grid-area: 3 / 2 / 3 / 2;
+}
+
+#reset {
+    grid-area: 3 / 3 / 3 / 3;
+}
+
+#stop {
+    grid-area: 3 / 4 / 3 / 4;
+}
