--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Creatica</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'static/style.css' %}">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <div class="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="{% url 'login' %}"></a></li>
+                <li><a href="{% url 'login' %}"> Login </a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
                 <li><a href="#">About</a></li>
             </ul>
