--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -12,8 +12,8 @@
     <header>
         <div class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="{% url 'login' %}"></a></li>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
                 <li><a href="#">About</a></li>
             </ul>
