--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Creatica</title>
-    <link rel="stylesheet" href="{% static 'static/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
