--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -1,6 +1,29 @@
+{% load static %}
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Creatica</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+</head>
+
+<body>
+    <header>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="{% url 'login' %}"> Login </a></li>
+                <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </div>
+    </header>
 <h1>signup</h1>
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">submit</button>
 </form>
+</body>
+</html>
