--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="{% url 'login' %}"> Login </a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="{% url 'about' %}">About</a></li>
             </ul>
         </div>
     </header>
