spottify API in progress

--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -46,6 +46,9 @@
         <button id="reset" class="btn">Reset</button>
     </div>
     <script src="{% static 'app.js' %}"></script>
+    <div id = "spotify_multiplayer">
+      
+    </div>
 </body>
 </header>
 </body>
