--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -47,8 +47,8 @@
     </div>
     <script src="{% static 'app.js' %}"></script>
     <div id = "spotify_multiplayer">
-      
     </div>
+    <div id="tip-id"></div>
 </body>
 </header>
 </body>
