--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="{% url 'login' %}"> Login </a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
