--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -52,7 +52,7 @@
     {% endfor %}
     <script src="{% static 'app.js' %}"></script>
     <div id="spotify_multiplayer">
-
+        HELLO!
     </div>
     <div id="tip-id"></div>
 </body>
