--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
-<body>
+<body style = "background-color:#F0E7DB">
     <header>
         <div class="navbar">
-            <ul>
+            <ul style = "background: #F4DEC2">
                 <li><a href="/">Home</a></li>
                 <li><a href="{% url 'login' %}"> Login </a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
