--- a/study/static/style.css
+++ b/study/static/style.css
@@ -14,6 +14,7 @@ body {
 
 .navbar li {
     display: inline-block;
+    font-size: 25px;
 }
 
 .navbar a {
@@ -22,8 +23,15 @@ body {
     width: 100px;
     display: block;
     padding: 25px 20px;
-    font-size: 40;
     text-align: center;
+}
+
+.navbar a:hover {
+    background: rgba(255, 255, 255, 0.632)
+}
+
+.navbar li .active {
+    background-color: #F2B4A8;
 }
 
 #container {
@@ -38,6 +46,57 @@ body {
     grid-template-rows: repeat(3, 1fr);
 }
 
+#container2 {
+    margin: auto;
+    padding: 7.5%;
+}
+
+.text1 {
+    text-align: center;
+    color: black;
+    padding: 10px;
+    background-color: #F0E7DB;
+    border: 5px solid #E98977;
+    margin-left: 30%;
+    margin-right: 30%;
+    font-family: "Balsamiq Sans"
+}
+  
+.text1 h1 {
+    font-size: 40px;
+    color: black;
+}
+
+.text1 h2 {
+    font-size: 30px;
+    color: black;
+}
+
+.text1 p {
+    font-size: 20px;
+    color: black;
+}
+
+.text2 {
+    text-align: center;
+    color: black;
+    padding: 10px;
+    background-color: #F0E7DB;
+    margin-left: 30%;
+    margin-right: 30%;
+    font-family: "Balsamiq Sans"
+}
+
+.text3 {
+    text-align: left;
+    color: black;
+    padding: 10px;
+    background-color: #F0E7DB;
+    margin-left: 30%;
+    margin-right: 30%;
+    font-family: "Balsamiq Sans"
+}
+  
 .label {
     align-self: center;
     justify-self: center;
@@ -84,6 +143,9 @@ p {
     grid-area: 2 / 4 / 2 / 4;
 }
 
+.wrapper {
+    text-align: center;
+}
 .btn {
     margin: 0 auto;
     width: 70px;
