--- a/study/templates/about.html
+++ b/study/templates/about.html
@@ -21,7 +21,7 @@
     </header>
     <div id="container2">
         <div class="text1">
-            <h1 align="center">About</h1>
+            <!-- <h1 align="left">About</h1> -->
             <h2 align="center">Who are we?</h2>
             <p align="center">
                 We are of team of 4 like-minded individuals with different backgrounds coming together to participate in the Creatica 2022 Hackathon.
