--- a/study/static/style.css
+++ b/study/static/style.css
@@ -107,23 +107,25 @@ p {
 #spotify_multiplayer {
     height: 350px;
     width: 270px;
-    background-color: #202023;    ;
+    background-color: #202023;
+    ;
     margin: 0 auto;
     border: 2px solid #E98977;
     margin-top: 10%;
     margin-right: 5%;
-    display: grid;  
+    display: grid;
     border-radius: 10px;
 }
 
-.sp{
+.sp {
     margin-top: 10px;
     display: block;
     margin-left: auto;
     margin-right: 10px;
     width: 20%;
 }
-.profile{
+
+.profile {
     margin-top: 0px;
     display: block;
     border-radius: 50%;
@@ -132,21 +134,23 @@ p {
     width: 40%;
 }
 
-.title{
+.title {
     margin-top: 0px;
     text-align: center;
     color: white;
     font-family: 'Roboto', sans-serif;
 }
-.artist{
+
+.artist {
     margin-top: -25px;
     text-align: center;
     color: white;
     font-family: 'Roboto', sans-serif;
-    font-size:small;
+    font-size: small;
     font-weight: normal;
 }
-.bar{
+
+.bar {
     margin-top: 20px;
     width: 80%;
     height: 10%;
@@ -157,7 +161,7 @@ p {
     border-radius: 1.5em;
 }
 
-.bar .progress-bar{
+.bar .progress-bar {
     position: absolute;
     height: 100%;
     background-color: rgb(186, 38, 38);
@@ -165,21 +169,27 @@ p {
 }
 
 @keyframes progress-animation {
-    0% {width:0%;}
-    100% {width: 100%;}
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
 }
 
-.play{
-    float:left;
+.play {
+    float: left;
     width: 10%;
-    padding:31.5px;
+    padding: 31.5px;
 }
 
-.play-buttons::after{
+.play-buttons::after {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
 /*
 .button.play {
     width: 74px;
@@ -198,7 +208,7 @@ p {
     border-color: transparent transparent transparent #202020;
 }*/
 
-.spotify-login{
+.spotify-login {
     background-color: #1ED760;
     border-radius: 12px;
     border: 2px solid #1ed760;
@@ -209,7 +219,7 @@ p {
     height: 80%;
     padding: 5px;
     outline: none;
-    text-align:center;
+    text-align: center;
     font-family: 'Roboto', sans-serif;
     font-size: small;
     color: white;
@@ -218,4 +228,48 @@ p {
 
 .spotify-login:hover {
     box-shadow: 0 0 0 2px #12a545;
+}
+
+.button1 {
+    background: #F2B4A8;
+    border-color: #E98977;
+    font-weight: 600;
+    color: #fff;
+    width: 30%;
+    height: 30px;
+    font-size: 20px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.4);
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    padding: 8px 10px;
+    margin: 3px;
+    background-color: white;
+    height: 30px;
+    border-radius: 5px;
+    cursor: text;
+
+    transition: border .1s linear;
+    font-size: 15px;
+    text-align: center;
+    width: 30%;
+}
+
+.form-select {
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    padding: 8px 10px;
+    background-color: white;
+    height: 40px;
+    border-radius: 5px;
+    cursor: text;
+    margin: 3px;
+    transition: border .1s linear;
+    font-size: 15px;
+    text-align: center;
+    width: 30%;
 }
