--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -19,6 +19,8 @@
             </ul>
         </div>
     </header>
+    <div id="container2">
+        <div class="text2">
     <h1>signup</h1>
     <form method="POST">
         {% csrf_token %}
@@ -82,6 +84,8 @@
 
         <button type="submit" class="button1">Sign Up</button>
     </form>
+    </div>
+    </div>
 </body>
 
 </html>
