spotify connection with frontend

--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -75,8 +75,8 @@
             <img class="play" src="{%static "img/skip-button.png"%}"/>
         </div>
 
-        <button class="spotify-login" type="submit"> Login </button>
-        
+        <button id="spotify-btn-login" class="spotify-login" type="submit"> Login </button>
+        <script src="{% static 'multiplayer.js' %}"></script>
     </div>
 </body>
 
