--- a/study/templates/new.html
+++ b/study/templates/new.html
@@ -12,10 +12,10 @@
     <header>
         <div class="navbar">
             <ul style = "background: #F4DEC2">
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="{% url 'login' %}"> Login </a></li>
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href="{% url 'study:about' %}">About</a></li>
             </ul>
         </div>
     </header>
