--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <title>Creatica</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
@@ -48,26 +48,22 @@
         <button id="stop" class="btn">Stop</button>
         <button id="reset" class="btn">Reset</button>
     </div>
-<<<<<<< HEAD
     <div id="container3">
         <div class="list">
-        <h2>To Do List</h2>
-        <li><a href="{% url 'new' %}">add task</a></li>
-        <br />
-        <li><a>_____________________</a></li>
-        <br />
-        <li><a>_____________________</a></li>
-        <br />
-        <li><a>_____________________</a></li>
-        <br />
-        <li><a>_____________________</a></li>
-        <br />
-        <li><a>_____________________</a></li>
+            <h2>To Do List</h2>
+            <li><a href="{% url 'study:new' %}">add task</a></li>
+            <br />
+            <li><a>_____________________</a></li>
+            <br />
+            <li><a>_____________________</a></li>
+            <br />
+            <li><a>_____________________</a></li>
+            <br />
+            <li><a>_____________________</a></li>
+            <br />
+            <li><a>_____________________</a></li>
+        </div>
     </div>
-    </div>
-=======
-    <a href="{% url 'study:new' %}">add task</a>
->>>>>>> c4646dd9d435d66c08b2be0bf421cb7dccee73e8
     {% for post in posts_list %}
     <li>{{post.title}}</li>
     <a href="{% url 'delete' %}">X</a>
