--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -48,7 +48,22 @@
         <button id="stop" class="btn">Stop</button>
         <button id="reset" class="btn">Reset</button>
     </div>
-    <a href="{% url 'study:new' %}">add task</a>
+    <div id="container3">
+        <div class="list">
+        <h2>To Do List</h2>
+        <li><a href="{% url 'study:new' %}">add task</a></li>
+        <br />
+        <li><a>_____________________</a></li>
+        <br />
+        <li><a>_____________________</a></li>
+        <br />
+        <li><a>_____________________</a></li>
+        <br />
+        <li><a>_____________________</a></li>
+        <br />
+        <li><a>_____________________</a></li>
+    </div>
+    </div>
     {% for post in posts_list %}
     <li>{{post.title}}</li>
     <a href="{% url 'delete' %}">X</a>
