--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -66,7 +66,7 @@
     </div>
     {% for post in posts_list %}
     <li>{{post.title}}</li>
-    <a href="{% url 'delete' %}">X</a>
+    <a href="{% url 'study:delete' %}">X</a>
     {% endfor %}
     <script src="{% static 'app.js' %}"></script>
     <div id="spotify_multiplayer">
