--- a/study/templates/about.html
+++ b/study/templates/about.html
@@ -13,6 +13,7 @@
 
 <body style="background-color:#F0E7DB">
     <header>
+        <a href="/"><img class="logo" src="{%static "/img/snowball.png"%}" /></a>
         <div class="navbar">
             <ul style="background: #F4DEC2">
                 <li><a href="/">Home</a></li>
