--- a/study/templates/home.html
+++ b/study/templates/home.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="icon" type="image/png" href="{%static "/img/snowball.png"%}" />
 </head>
 
 <body style="background-color:#F0E7DB">
